chore(app): add styling, dragging, multi-button and more
* vdom/h handles direct events correctly
* util/dragger utility allows for eazy drag handlers
* replace catw with chokidar for more robust watching
* refactor components to include styles
* really implement multi-button

--- a/client/lib/style.less
+++ b/client/lib/style.less
@@ -1,2 +1,49 @@
+@import "_includes";
+@import "_variables";
+
+@import "_base";
+
+@import "app/tabs/bpmn-tab";
+
 @import "base/components/menu-bar";
 @import "base/components/tabbed";
+
+
+.app {
+
+  .flex-container(column);
+
+  overflow: hidden;
+
+  .menu-bar {
+    .flex-container(row);
+
+    flex: initial;
+
+    > .entry {
+      flex: initial;
+    }
+  }
+
+  .tabbed {
+    .flex-container(column);
+
+    flex: 1;
+
+    > .tabs {
+      .flex-container(row);
+
+      > .tab {
+        flex: initial;
+      }
+    }
+
+    > .content {
+      .flex-container(column);
+    }
+  }
+
+  .footer {
+    flex: initial;
+  }
+}
