fix(style): correctly nest flex children

--- a/client/lib/app/tabs/views/bpmn-editor.less
+++ b/client/lib/app/tabs/views/bpmn-editor.less
@@ -23,10 +23,13 @@
 
     .toggle {
       position: absolute;
-      left: -20px;
-      top: 20px;
+      left: -62px;
+      top: 50px;
       background: #CCC;
       padding: 5px;
+      transform: rotate(-90deg);
+      white-space: nowrap;
+      white-space: nowrap;
     }
   }
 }
