--- a/client/lib/app/tabs/bpmn-tab.less
+++ b/client/lib/app/tabs/bpmn-tab.less
@@ -8,4 +8,33 @@
   > content {
     .flex-container(row);
   }
+
+}
+
+.tabbed {
+
+  &.bpmn-tab {
+
+    position: relative;
+
+    > .tabs {
+      position: absolute;
+      bottom: 0;
+
+      margin-bottom: -22px;
+      margin-left: 5px;
+
+      > .tab {
+        margin: -1px 0 0 5px;
+        padding: 3px 10px;
+
+        border: solid 1px #CCC;
+        border-radius: 0 0 2px 2px;
+
+        &.active {
+          border-top: none;
+        }
+      }
+    }
+  }
 }
