chore(client): lowercase + log
* unify naming to lower case file names
* more modularization
* add log + ability to toggle it

--- a/client/lib/base/components/tabbed.less
+++ b/client/lib/base/components/tabbed.less
@@ -30,13 +30,16 @@
 
     > .tabs {
 
+      line-height: 26px;
+
       > .tab {
 
         border: solid 1px #CCC;
         border-radius: 2px 2px 0 0;
-
-        padding: 7px 9px 5px 9px;
         margin: 1px 5px -1px 0;
+        padding: 0 9px;
+
+        outline: none;
 
         &.active {
           margin-top: -1px;
@@ -44,6 +47,7 @@
 
           border-top: solid 2px blue;
         }
+
       }
     }
 
