--- a/client/lib/app/tabs/bpmn-tab.less
+++ b/client/lib/app/tabs/bpmn-tab.less
@@ -24,12 +24,16 @@
       margin-bottom: -22px;
       margin-left: 5px;
 
+      line-height: 20px;
+
       > .tab {
         margin: -1px 0 0 5px;
-        padding: 3px 10px;
+        padding: 0 9px;
 
         border: solid 1px #CCC;
         border-radius: 0 0 2px 2px;
+
+        outline: none;
 
         &.active {
           border-top: none;
