--- a/client/lib/style.less
+++ b/client/lib/style.less
@@ -3,49 +3,4 @@
 
 @import "_base";
 
-@import "app/log";
-@import "app/tabs/bpmn-tab";
-
-@import "base/components/menu-bar";
-@import "base/components/tabbed";
-
-
-.app {
-
-  .flex-container(column);
-
-  height: 100%;
-  overflow: hidden;
-
-  .menu-bar {
-    .flex-container(row);
-    .flex-fill(initial);
-
-    > .entry {
-      .flex-fill(initial);
-    }
-  }
-
-  .tabbed {
-    .flex-container(column);
-    .flex-fill(1);
-
-    > .tabs {
-      .flex-container(row);
-      .flex-fill(initial);
-
-      > .tab {
-        .flex-fill(initial);
-      }
-    }
-
-    > .content {
-      .flex-container(column);
-      .flex-fill(1);
-    }
-  }
-
-  .footer {
-    .flex-fill(initial);
-  }
-}
+@import "app/app.less";
